--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -1,7 +1,7 @@
 ingresses:
-  - "https://tms-varsel-test.dev.nav.no"
+  - "https://www.dev.nav.no/tms-varsel-test"
 env:
   - name: APP_URL
-    value: "https://tms-varsel-test.dev.nav.no"
+    value: "https://www.dev.nav.no/tms-varsel-test"
 externals:
   - "dekoratoren.dev.nav.no"
