--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "openid-client": "5.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.34.0"
+    "react-hook-form": "7.34.0",
+    "swr": "1.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
