--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cache": "5.1.2",
     "openid-client": "5.1.8",
     "react": "18.2.0",
+    "react-confetti": "6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.34.0",
     "swr": "1.3.0"
