--- a/package.json
+++ b/package.json
@@ -15,16 +15,12 @@
     "@navikt/ds-icons": "1.0.2",
     "@navikt/ds-react": "1.0.2",
     "@navikt/nav-dekoratoren-moduler": "1.6.9",
-    "@sentry/nextjs": "7.5.0",
-    "axios": "0.27.2",
     "cookie": "0.5.0",
     "date-fns": "2.28.0",
     "html-react-parser": "2.0.0",
-    "jose": "4.8.3",
     "jsdom": "20.0.0",
     "next": "12.3.1",
     "node-cache": "5.1.2",
-    "openid-client": "5.1.8",
     "react": "18.2.0",
     "react-confetti": "6.1.0",
     "react-dom": "18.2.0",
@@ -45,11 +41,15 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.3",
     "lint-staged": ">=10",
+    "msw": "0.33.2",
     "prettier": "2.7.1",
     "typescript": "4.7.4"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
     "*.{js,ts,tsx,css,md}": "prettier --write"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
