--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - "main"
       - "prod-deploy"
-env:
-  "IMAGE": "ghcr.io/${{ github.repository }}:${{ github.sha }}"
+
 jobs:
   "build":
     name: "build"
@@ -38,21 +37,16 @@ jobs:
       - name: "Set up Docker Buildx"
         id: "buildx"
         uses: "docker/setup-buildx-action@v1"
-      - name: "Login to GitHub Docker Registry"
-        uses: "docker/login-action@v1"
+      - name: "Build and push"
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
         with:
-          "registry": "ghcr.io"
-          "username": "${{ github.actor }}"
-          "password": "${{ secrets.GITHUB_TOKEN }}"
-      - name: "Build and push Docker"
-        uses: "docker/build-push-action@v2"
-        with:
-          context: .
-          file: Dockerfile
-          tags: "${{ env.IMAGE }}"
-          push: "true"
-          cache-from: "type=gha"
-          cache-to: "type=gha,mode=max"
+          team: min-side
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
+
   deploy-dev:
     name: "Deploy to dev"
     needs: "build"
