--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: "Build and deploy to dev"
+name: "Build and deploy"
 on:
   workflow_dispatch:
   push:
@@ -10,6 +10,12 @@ jobs:
   "build":
     name: "build"
     runs-on: "ubuntu-latest"
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      packages: 'write'
+
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-node@v2"
