Sett image variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,27 +51,28 @@ jobs:
       image: ${{ steps.docker-build-push.outputs.image }}
 
   deploy-dev:
-    name: "Deploy to dev"
     needs: "build"
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v2"
-      - name: "Deploy to DEV"
+      - name: "Deploy to dev"
         uses: "nais/deploy/actions/deploy@v1"
         env:
           "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
           "CLUSTER": "dev-gcp"
           "RESOURCE": ".nais/dev/nais.yaml"
+          "VAR": image=${{ needs.build.outputs.image }},version=${{ github.sha }}
+
   deploy-prod:
     if: github.ref == 'refs/heads/main'
-    name: "Deploy to prod"
     needs: "build"
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v2"
-      - name: "Deploy to DEV"
+      - name: "Deploy to prod"
         uses: "nais/deploy/actions/deploy@v1"
         env:
           "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
           "CLUSTER": "prod-gcp"
           "RESOURCE": ".nais/prod/nais.yaml"
+          "VAR": image=${{ needs.build.outputs.image }},version=${{ github.sha }}
