--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,21 @@
-name: "Build and deploy to dev"
+name: "Build and deploy"
 on:
   workflow_dispatch:
   push:
     branches:
       - "main"
-      - "msw"
-env:
-  "IMAGE": "ghcr.io/${{ github.repository }}:${{ github.sha }}"
+      - "prod-deploy"
+
 jobs:
   "build":
     name: "build"
     runs-on: "ubuntu-latest"
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      packages: 'write'
+
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-node@v2"
@@ -35,33 +40,39 @@ jobs:
         run: cat .env.local
       - name: "Bygg klient(yarn run build)"
         run: "yarn run build"
-      - name: "Set up Docker Buildx"
-        id: "buildx"
-        uses: "docker/setup-buildx-action@v1"
-      - name: "Login to GitHub Docker Registry"
-        uses: "docker/login-action@v1"
+      - name: "Build and push"
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
         with:
-          "registry": "ghcr.io"
-          "username": "${{ github.actor }}"
-          "password": "${{ secrets.GITHUB_TOKEN }}"
-      - name: "Build and push Docker"
-        uses: "docker/build-push-action@v2"
-        with:
-          context: .
-          file: Dockerfile
-          tags: "${{ env.IMAGE }}"
-          push: "true"
-          cache-from: "type=gha"
-          cache-to: "type=gha,mode=max"
-  "deployAppToDev":
-    name: "Deploy app to dev"
+          team: min-side
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
+
+  deploy-dev:
     needs: "build"
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v2"
-      - name: "Deploy to DEV"
+      - name: "Deploy to dev"
         uses: "nais/deploy/actions/deploy@v1"
         env:
           "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
           "CLUSTER": "dev-gcp"
-          "RESOURCE": ".nais/nais.yaml"
+          "RESOURCE": ".nais/dev/nais.yaml"
+          "VAR": image=${{ needs.build.outputs.image }},version=${{ github.sha }}
+
+  deploy-prod:
+    if: github.ref == 'refs/heads/main'
+    needs: "build"
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: "actions/checkout@v2"
+      - name: "Deploy to prod"
+        uses: "nais/deploy/actions/deploy@v1"
+        env:
+          "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
+          "CLUSTER": "prod-gcp"
+          "RESOURCE": ".nais/prod/nais.yaml"
+          "VAR": image=${{ needs.build.outputs.image }},version=${{ github.sha }}
